--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --watch src --exec node --loader ts-node/esm --experimental-specifier-resolution=node src/server.ts",
     "build": "rollup -c",
-    "start": "nodemon src/server.ts"
+    "start": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
