--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,8 @@
       "paths": {
         "utils/*": ["utils/*"],
         "service/*": ["service/*"],
-        "controller/*": ["controller/*"]
+        "controller/*": ["controller/*"],
+        "config": ["config/index.ts"]
       },
     },
     "include": ["src"],
