READMEME.md file update

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon --watch src --exec node --loader ts-node/esm --trace-warnings --experimental-specifier-resolution=node src/server.ts",
     "build": "rollup -c",
-    "start": "node dist/server.js"
+    "start": "node dist/server.js",
+    "test": "jest --detectOpenHandles"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +25,7 @@
     "firebase": "^10.7.1",
     "http": "^0.0.1-security",
     "http-status": "^1.7.3",
+    "jest": "^29.7.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
@@ -55,6 +57,7 @@
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/express-session": "^1.18.2",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.2.1",
@@ -62,11 +65,14 @@
     "@types/nodemailer": "^6.4.17",
     "@types/passport": "^1.0.17",
     "@types/passport-google-oauth2": "^0.1.10",
+    "@types/supertest": "^6.0.3",
     "@types/ws": "^8.18.1",
     "mock-aws-s3": "^4.0.2",
+    "mongodb-memory-server": "^10.2.0",
     "nodemon": "^3.1.10",
     "rollup": "^4.46.2",
-    "supertest": "^7.1.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.1",
     "ts-loader": "^9.5.2",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
